; ModuleID = '/home/carl/AnghaBench/git/extr_tmp-objdir.c_setup_tmp_objdir.c'
source_filename = "/home/carl/AnghaBench/git/extr_tmp-objdir.c_setup_tmp_objdir.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [8 x i8] c"%s/pack\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*)* @setup_tmp_objdir to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @setup_tmp_objdir(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  store i32 0, i32* %4, align 4
  %5 = load i8*, i8** %2, align 8
  %6 = call i8* @xstrfmt(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i8* %5)
  store i8* %6, i8** %3, align 8
  %7 = load i8*, i8** %3, align 8
  %8 = call i32 @mkdir(i8* %7, i32 511)
  store i32 %8, i32* %4, align 4
  %9 = load i8*, i8** %3, align 8
  %10 = call i32 @free(i8* %9)
  %11 = load i32, i32* %4, align 4
  ret i32 %11
}

declare dso_local i8* @xstrfmt(i8*, i8*) #1

declare dso_local i32 @mkdir(i8*, i32) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
